--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,14 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  name:
+    abbr: "SHS"
+    full: "Syosset High School"
+  nav:
+    home: "Home"
+    contact: "Contact"
+  contact:
+    phone: "(516) 364-5675"
+    email: "admin@syosseths.com" #TODO: email
+    address: "70 Southwoods Road Syosset, New York 11791"
+  copyright: "© Copyright %{year} Syosset High School"
