Add R/W display, move captions for figures as overlays on flexslider

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,11 @@ en:
     contact: "Contact"
     departments: "Departments"
     extracurriculars: "Clubs"
+  welcome:
+    slider:
+      hero:
+        first: "A BLUE RIBBON SCHOOL"
+        second: "DEDICATED STAFF"
   contact:
     phone: "Call us today (516) 364-5675"
     email: "admin@syosseths.com" #TODO: email
