--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,9 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  menu:
+    account:
+      sign_in_with: "Sign in with Google"
   name:
     abbr: "SHS"
     full: "Syosset High School"
