Add principal's quote on about page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,7 +51,7 @@ en:
       title: "About Us"
       principal:
         name: "Giovanni Durante"
-        statement: "TODO"
+        statement: "Let's get out there and make it a great day!"
       info:
         title: "Philosophy"
         text: "At Syosset High School, we strive to provide an education that is
