--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,7 +64,7 @@ en:
         continue to grow and explore long after their last test is taken. It is
         our hope that Syosset students will emerge as discerning, educated
         citizens—with the skills necessary to find success in the university, in
-        the workplace, in all the challenges life offers. Our administration and
+        the workplace, and in all the challenges life offers. Our administration and
         staff serve to model the values and character we expect of our students:
         patience, respect, integrity, dignity and empathy. We share our
         responsibility with parents and our community, and, in turn, hope to
