Change navbar to say activities instead of clubs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,7 +41,7 @@ en:
     about: "About"
     contact: "Contact"
     departments: "Departments"
-    extracurriculars: "Clubs"
+    extracurriculars: "Activities"
   welcome:
     slider:
       hero:
