"Sign in with Google" -> "Sign In"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@
 en:
   menu:
     account:
-      sign_in_with: "Sign in with Google"
+      sign_in_with: "Sign In"
   name:
     abbr: "SHS"
     full: "Syosset High School"
