Add meta tags for search engines

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,9 @@ en:
       hero:
         first: "A BLUE RIBBON SCHOOL"
         second: "DEDICATED STAFF"
+    description: "Syosset High School is a top-tier high school located in Syosset, New York.
+                  As a blue ribbon school of excellence, we provide students with a rigorous
+                  education that will serve them for life."
     about:
       title: "About Us"
       principal:
