Disable department pagination in admin mode, closes #67

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,7 @@ en:
     about: "About"
     contact: "Contact"
     departments: "Departments"
+    departments_all: "View all departments..."
     extracurriculars: "Activities"
   welcome:
     slider:
