Add bulletin resource to application

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,7 @@ en:
     home: "Home"
     about: "About"
     contact: "Contact"
-    departments: "Departments and Courses"
+    departments: "Departments/Courses"
     departments_all: "View all departments..."
     extracurriculars: "Extra-Curricular Activities"
     admin: "Admin"
