Migrate header, navbar and footer to Bootstrap 4

--- a/config/locales/content/en.yml
+++ b/config/locales/content/en.yml
@@ -29,4 +29,4 @@ en:
           make Syosset High School students aware of their responsibility and
           connection to the larger world."
   contact:
-    phone: "Call us today (516) 364-5675"
+    phone: "Call us today: (516) 364-5675"
