Fix navbar responsiveness

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,9 +11,9 @@ en:
     home: "Home"
     about: "About"
     contact: "Contact"
-    departments: "Departments/Courses"
+    departments: "Departments"
     departments_all: "View all departments..."
-    extracurriculars: "Extra-Curricular Activities"
+    extracurriculars: "Extra-Curriculars"
     admin: "Admin"
   welcome:
     landing:
