Add school address to website header, closes #104

--- a/config/locales/content/en.yml
+++ b/config/locales/content/en.yml
@@ -29,3 +29,4 @@ en:
           connection to the larger world."
   contact:
     phone: "Call us today: (516) 364-5675"
+    address: "Visit us at: 70 S Woods Rd, Syosset, NY 11791"
